--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "@jackyzha0/quartz",
   "description": "🌱 publish your digital garden and notes as a website",
   "private": true,
-  "version": "4.4.0",
+  "version": "4.2.4",
   "type": "module",
-  "author": "jackyzha0 <j.zhao2k19@gmail.com>",
+  "author": "André Martiny",
   "license": "MIT",
-  "homepage": "https://quartz.jzhao.xyz",
+  "homepage": "https://github.com//Andremartiny/Andremartiny.github.io",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jackyzha0/quartz.git"
+    "url": "https://github.com/Andremartiny/Andremartiny.github.io"
   },
   "scripts": {
     "quartz": "./quartz/bootstrap-cli.mjs",
@@ -21,7 +21,7 @@
   },
   "engines": {
     "npm": ">=9.3.1",
-    "node": "20 || >=22"
+    "node": ">=18.14"
   },
   "keywords": [
     "site generator",
@@ -35,43 +35,41 @@
     "quartz": "./quartz/bootstrap-cli.mjs"
   },
   "dependencies": {
-    "@clack/prompts": "^0.8.2",
-    "@floating-ui/dom": "^1.6.12",
-    "@myriaddreamin/rehype-typst": "^0.5.0-rc9",
-    "@napi-rs/simple-git": "0.1.19",
-    "@tweenjs/tween.js": "^25.0.0",
+    "@clack/prompts": "^0.7.0",
+    "@floating-ui/dom": "^1.6.5",
+    "@napi-rs/simple-git": "0.1.16",
     "async-mutex": "^0.5.0",
     "chalk": "^5.3.0",
-    "chokidar": "^4.0.2",
+    "chokidar": "^3.6.0",
     "cli-spinner": "^0.2.10",
     "d3": "^7.9.0",
-    "esbuild-sass-plugin": "^3.3.1",
+    "esbuild-sass-plugin": "^2.16.1",
     "flexsearch": "0.7.43",
     "github-slugger": "^2.0.0",
-    "globby": "^14.0.2",
+    "globby": "^14.0.1",
     "gray-matter": "^4.0.3",
-    "hast-util-to-html": "^9.0.4",
-    "hast-util-to-jsx-runtime": "^2.3.2",
-    "hast-util-to-string": "^3.0.1",
+    "hast-util-to-html": "^9.0.1",
+    "hast-util-to-jsx-runtime": "^2.3.0",
+    "hast-util-to-string": "^3.0.0",
     "is-absolute-url": "^4.0.1",
     "js-yaml": "^4.1.0",
-    "lightningcss": "^1.28.2",
+    "lightningcss": "^1.25.1",
     "mdast-util-find-and-replace": "^3.0.1",
     "mdast-util-to-hast": "^13.2.0",
     "mdast-util-to-string": "^4.0.0",
-    "mermaid": "^11.4.1",
     "micromorph": "^0.4.5",
-    "pixi.js": "^8.6.5",
-    "preact": "^10.25.2",
-    "preact-render-to-string": "^6.5.12",
+    "preact": "^10.22.1",
+    "preact-render-to-string": "^6.5.5",
     "pretty-bytes": "^6.1.1",
     "pretty-time": "^1.1.0",
+    "puppeteer": "^23.0.2",
+    "quartz": "^0.0.1",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
-    "rehype-citation": "^2.2.2",
-    "rehype-katex": "^7.0.1",
+    "rehype-citation": "^2.0.0",
+    "rehype-katex": "^7.0.0",
     "rehype-mathjax": "^6.0.0",
-    "rehype-pretty-code": "^0.14.0",
+    "rehype-pretty-code": "^0.13.2",
     "rehype-raw": "^7.0.0",
     "rehype-slug": "^6.0.0",
     "remark": "^15.0.1",
@@ -80,21 +78,19 @@
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
     "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.1.1",
+    "remark-rehype": "^11.1.0",
     "remark-smartypants": "^3.0.2",
     "rfdc": "^1.4.1",
-    "rimraf": "^6.0.1",
-    "satori": "^0.12.0",
-    "serve-handler": "^6.1.6",
-    "sharp": "^0.33.5",
-    "shiki": "^1.24.2",
+    "rimraf": "^5.0.7",
+    "serve-handler": "^6.1.5",
+    "shiki": "^1.10.3",
     "source-map-support": "^0.5.21",
     "to-vfile": "^8.0.0",
     "toml": "^3.0.0",
-    "unified": "^11.0.5",
+    "unified": "^11.0.4",
     "unist-util-visit": "^5.0.0",
-    "vfile": "^6.0.3",
-    "workerpool": "^9.2.0",
+    "vfile": "^6.0.1",
+    "workerpool": "^9.1.2",
     "ws": "^8.18.0",
     "yargs": "^17.7.2"
   },
@@ -103,14 +99,14 @@
     "@types/d3": "^7.4.3",
     "@types/hast": "^3.0.4",
     "@types/js-yaml": "^4.0.9",
-    "@types/node": "^22.10.2",
+    "@types/node": "^20.12.5",
     "@types/pretty-time": "^1.1.5",
     "@types/source-map-support": "^0.5.10",
-    "@types/ws": "^8.5.13",
-    "@types/yargs": "^17.0.33",
-    "esbuild": "^0.24.0",
-    "prettier": "^3.4.2",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "@types/ws": "^8.5.11",
+    "@types/yargs": "^17.0.32",
+    "esbuild": "^0.19.9",
+    "prettier": "^3.3.2",
+    "tsx": "^4.16.0",
+    "typescript": "^5.5.3"
   }
 }
