--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@clack/prompts": "^0.7.0",
     "@floating-ui/dom": "^1.6.5",
     "@napi-rs/simple-git": "0.1.16",
+    "@tweenjs/tween.js": "^25.0.0",
     "async-mutex": "^0.5.0",
     "chalk": "^5.3.0",
     "chokidar": "^3.6.0",
@@ -57,7 +58,9 @@
     "mdast-util-find-and-replace": "^3.0.1",
     "mdast-util-to-hast": "^13.2.0",
     "mdast-util-to-string": "^4.0.0",
+    "mermaid": "^11.4.1",
     "micromorph": "^0.4.5",
+    "pixi.js": "^8.6.6",
     "preact": "^10.22.1",
     "preact-render-to-string": "^6.5.5",
     "pretty-bytes": "^6.1.1",
